--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,12 +58,10 @@ jobs:
 
     - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/')
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ steps.version.outputs.version }}
+        tag_name: ${{ github.ref_name }}
+        name: Release ${{ steps.version.outputs.version }}
         body: |
           ## Changes
           
