--- a/helm/tiny-test/templates/ingress.yaml
+++ b/helm/tiny-test/templates/ingress.yaml
@@ -1,4 +1,29 @@
 {{- if .Values.ingress.enabled -}}
+{{- if eq .Values.ingress.className "gateway-api" }}
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
+metadata:
+  name: {{ include "tiny-test.fullname" . }}-route
+spec:
+  parentRefs:
+    - name: {{ include "tiny-test.fullname" . }}-gateway
+  hostnames:
+    {{- range .Values.ingress.hosts }}
+    - {{ .host }}
+    {{- end }}
+  rules:
+    - matches:
+        {{- range .Values.ingress.hosts }}
+        {{- range .paths }}
+        - path:
+            type: {{ .pathType }}
+            value: {{ .path }}
+        {{- end }}
+        {{- end }}
+      backendRefs:
+        - name: {{ include "tiny-test.fullname" . }}
+          port: {{ $.Values.service.port }}
+{{- else }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -35,4 +60,5 @@ spec:
   tls:
     {{- toYaml .Values.ingress.tls | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
