--- a/helm/tiny-test/templates/ingress.yaml
+++ b/helm/tiny-test/templates/ingress.yaml
@@ -4,6 +4,11 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
   name: {{ include "tiny-test.fullname" . }}-route
+  labels:
+    app.kubernetes.io/name: {{ include "tiny-test.name" . }}
+    helm.sh/chart: {{ include "tiny-test.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   parentRefs:
     - name: {{ include "tiny-test.fullname" . }}-gateway
